✨ feat: 完善页面骨架和样式

--- a/index.html
+++ b/index.html
@@ -12,28 +12,33 @@
 
 <body>
     <div class="todoList">
-        <h2>ToDo</h2>
+        <h2>ToDo🎯</h2>
         <input type="text" placeholder="Add a Event...">
         <div class="events">
             <div class="short">
-                <h3>短期任务</h3>
+                <h3>🐋短期任务</h3>
                 <div class="items">
                     <div class="study">
+                        <!-- 按下缩小放大 -->
                         <button></button>
                         <p>正则表达式学习</p>
                     </div>
-                    <div class="study">
+                    <div class="life">
                         <button></button>
-                        <p>正则表达式学习</p>
+                        <p>记得倒自己房间的垃圾</p>
                     </div>
-                    <div class="study">
+                    <div class="work">
                         <button></button>
-                        <p>正则表达式学习</p>
+                        <p>完善ToDoList</p>
+                    </div>
+                    <div class="study finish">
+                        <button></button>
+                        <p>每日一题</p>
                     </div>
                 </div>
             </div>
             <div class="long">
-                <h3>长期任务</h3>
+                <h3>🚀长期任务</h3>
                 <div class="items">
                     <div class="study">
                         <button></button>
