💢: 好难啊啊啊,打个游戏再继续写

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery.min.js"></script>
 
 </head>
 
 <body>
     <div class="todoList">
         <h2>ToDo🎯</h2>
-        <input type="text" placeholder="Add a Event...">
+        <input type="text" placeholder="Add a Event..." id="userInput">
         <div class="events">
             <div class="short">
                 <h3>🐋短期任务</h3>
@@ -55,6 +56,6 @@
 
 
 </body>
-<!-- <script src="tmp.js"></script> -->
+<script src="script.js"></script>
 
 </html>
