🌈 style: 优化视觉效果

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="jquery.min.js"></script>
+    <script src="md5.js"></script>
 
 </head>
 
@@ -19,23 +20,22 @@
             <div class="short">
                 <h3>🐋短期任务</h3>
                 <div class="items">
-                    <div class="study">
-                        <!-- 按下缩小放大 -->
+                    <!-- <div class="study" id="s327189">
                         <button></button>
                         <p>正则表达式学习</p>
                     </div>
-                    <div class="life">
+                    <div class="life" id="s327183219">
                         <button></button>
                         <p>记得倒自己房间的垃圾</p>
                     </div>
-                    <div class="work">
+                    <div class="work" id="s32227189">
                         <button></button>
                         <p>完善ToDoList</p>
                     </div>
                     <div class="study finish">
                         <button></button>
                         <p>每日一题</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="long">
