🦄 refactor: 删除DDL功能,暂时不做

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h3>🐋短期任务</h3>
                 <div class="items">
                     <!-- 尝试插入一个骨架屏优化体验 -->
-                    <!-- <div class="study" id="s327189">
+                    <div class="study" id="s327189">
                         <button></button>
                         <p>正则表达式学习</p>
                     </div>
@@ -36,7 +36,7 @@
                     <div class="study finish">
                         <button></button>
                         <p>每日一题</p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <div class="long">
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-    <div class="mask">
+    <div class="mask ">
         <div class="addAlert">
             <h3>待办详情</h3>
             <input type="text" id="creatEve" placeholder="请输入待办内容">
@@ -74,10 +74,11 @@
                 <label for="cWork"><input type="radio" value="work" id="cWork" name="type">&nbsp;&nbsp;工作</label>
                 <label for="cLife"><input type="radio" value="life" id="cLife" name="type">&nbsp;&nbsp;生活</label>
             </div>
-            <div class="inputBox">
+            <!-- 记得用js获取每天的时间 -->
+            <!-- <div class="inputBox">
                 <span>截至日期:</span>
                 <input type="date" id="inputDate" value="2021-01-21">
-            </div>
+            </div> -->
             <button id="detailSubmit">确定</button>
         </div>
 
