--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="jquery.min.js"></script>
+    <script src="./script/jquery.min.js"></script>
 </head>
 
 <body>
@@ -84,6 +84,6 @@
     </div>
 
 </body>
-<script src="script.js"></script>
+<script src="./script/script.js"></script>
 
 </html>
