✨ feat: 新增考试安排提醒

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 </div>
             </div>
         </div>
+        <img src="./考试安排.png" alt="" id="exam">
     </div>
     <div class="mask ">
         <div class="addAlert">
